feat: Add new user onboarding, admin panel, and authentication improvements
- Add NewUserWelcome component with interactive onboarding guide
- Add EmptyDashboard component for users with no data
- Add AdminPanel with comprehensive user/PME management
- Add AuthErrorHandler and AuthCallbackHandler for better error management
- Add ConfirmSignup page for email confirmation
- Improve Dashboard with adaptive content for new users
- Add Supabase configuration for proper URL redirects
- Enhance authentication flow with better error handling
- Add comprehensive admin panel with user management, PME oversight, and system monitoring
- Implement intelligent dashboard that detects new users and shows appropriate content
- Add step-by-step onboarding guide with quick actions
- Improve user experience for first-time users with empty state management

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
     <!-- Sitemap -->
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-03XW3FWG7L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-03XW3FWG7L', {
+        page_title: 'Ebo\'o Gest - Gestion Multi-Activités PME',
+        page_location: window.location.href
+      });
+    </script>
+
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
