feat: Add real QR scanner with camera integration
- Add RealQRScanner component with actual camera functionality
- Integrate html5-qrcode library for QR/barcode scanning
- Support multiple formats: QR codes, EAN-13, CODE-128, CODE-39
- Add automatic product detection and creation
- Integrate with Supabase for real product lookup
- Add audit trail logging for scanned products
- Replace simulation scanner with real camera scanner
- Add TypeScript definitions for html5-qrcode
- Update Stock and Ventes pages with real scanner
- Add CDN script for html5-qrcode in index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       });
     </script>
 
+    <!-- HTML5 QR Code Scanner -->
+    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
