feat: Enhance application with QR code scanning, authentication improvements, and UI updates
- Replace RealQRScanner with SimpleQRScanner for streamlined QR code scanning
- Update index.html to use new logo for favicon and apple touch icon
- Improve Vite configuration for optimized build and preview settings
- Add Google sign-in functionality to AuthContext for enhanced user authentication
- Implement admin authentication checks in AdminPanel
- Update Auth page to include password reset functionality and Google sign-in option
- Refactor routing in App component for better navigation
- Add support for new contact and admin login pages in Home component
- Clean up unused RealQRScanner component and related code
- Enhance user experience with improved error handling and UI elements

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <meta name="twitter:image" content="https://eboo-gest.vercel.app/logo-ebo-gest.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon-ebo-gest.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon-ebo-gest.png" />
+    <link rel="icon" type="image/png" href="/logo-ebo-gest.png" />
+    <link rel="apple-touch-icon" href="/logo-ebo-gest.png" />
     
     <!-- Manifest -->
     <link rel="manifest" href="/manifest.json" />
@@ -54,7 +54,9 @@
     </script>
 
     <!-- HTML5 QR Code Scanner -->
-    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js" 
+            onload="console.log('HTML5 QR Code Scanner loaded successfully')"
+            onerror="console.error('Failed to load HTML5 QR Code Scanner')"></script>
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
