--- a/index.html
+++ b/index.html
@@ -51,15 +51,20 @@
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-03XW3FWG7L"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-03XW3FWG7L" 
+            onerror="console.warn('Google Analytics bloqué par le navigateur')"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-03XW3FWG7L', {
-        page_title: 'Ebo\'o Gest - Gestion Multi-Activités PME',
-        page_location: window.location.href
-      });
+      try {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-03XW3FWG7L', {
+          page_title: 'Ebo\'o Gest - Gestion Multi-Activités PME',
+          page_location: window.location.href
+        });
+      } catch (error) {
+        console.warn('Google Analytics non disponible:', error.message);
+      }
     </script>
 
     <!-- HTML5 QR Code Scanner -->
